feat: add jlink Maven profile to godot-java-examples